test/e2e/testdata/dynamic-resolver-original-host-header.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: ClientTrafficPolicy
metadata:
  name: dynamic-resolver-original-host-ctp
  namespace: gateway-conformance-infra
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: same-namespace
  headers:
    enableEnvoyHeaders: true
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dynamic-resolver-original-host-header
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: same-namespace
  hostnames:
    - www.example.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /original-host
      filters:
        - type: URLRewrite
          urlRewrite:
            hostname: test-service-foo.gateway-conformance-infra.svc.cluster.local
      backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: backend-dynamic-resolver-original-host
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: Backend
metadata:
  name: backend-dynamic-resolver-original-host
  namespace: gateway-conformance-infra
spec:
  type: DynamicResolver
---
apiVersion: v1
kind: Service
metadata:
  name: test-service-foo
  namespace: gateway-conformance-infra
spec:
  selector:
    app: infra-backend-v1
  ports:
    - protocol: TCP
      port: 80
      name: http11
      targetPort: 3000
